# Finance_News_RAG

./: .docker-compose.yml  .flaskenv  Dockerfile  Readme.md  docker-compose.yml  gunicorn.conf.py  helper.py  pyproject.toml  run.sh  setup.py  shell-start-neo4j.sh  watch_gpu.ps1
_lab/: async_timer.py  multi_thread_timer.py  prompt_template.py
_report_workflow/: Readme.md  news_preprocess.md  retriever.md
_report_workflow/planner/: 000_outline.md  PG_design.md  Response_Synthesis.md  cypher 時間序列.md  cypher.md  neo4j index X llama-index.md  不同新聞資料的策略.md  可能需要交接的功能.md  深入剖析_Neo4jPropertyGraphStore.md
apps/: app.py
apps/static/: style.css
conf/: neo4j.conf
config/: __init__.py  db_config.py  env.py
config/provider/: ollama.yml
dataset/: beta_get_news_from_rss.py  get_interactive.py  get_news.py  news_filter.py  timer.py  utils.py
dataset/base/: CompanyQA.csv  company_relations.csv
dataset/cypher/: CypherQuery_example.csv
dataset/download/: 1216_history_news.csv  1301_history_news.csv  2303_history_news.csv  2409_history_news.csv  2421_history_news.csv  (+17 more)
pipeline/: company.py  cypher_template.py  news.py  utils.py
retrievers/: custom_retriever.py  graph_retriever.py  pg_query.py  retriever_use_neo4j.py  vector_query.py
storages/: extractor.py  graph_storage.py
tests/: conftest.py  test_api.py  test_dataset.py  test_db.py  test_neo4j.py
utils/: __init__.py  agentic_chunker.py  csv_loader.py  decodeGoogleRss.py  fetch_simpleSite.py  filter.py  get.py  inspect.py  neo4j_fetch.py  node_content_phrase.py  ollama.py  path_manager.py  test_tools.py
(+83 files in other folders)
